--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts":{
+    "start": "concurrently \"cd client && npm start\" \"cd ./server && npm start\""
+  },
   "dependencies": {
     "concurrently": "^8.2.0"
   }
